Fixing seatmap overflow being hidden from user.
The solution is to allow overflow so that browsers will add scrollbars. Close #22

--- a/html/templates/ontime/css/style.css
+++ b/html/templates/ontime/css/style.css
@@ -26,11 +26,12 @@ body {
     font-size: 14px;
     line-height: 1.42857;
     color: #333;
+    overflow: auto;
 }
 
 #hole-page,
 body.sidebar-expanded {
-    overflow: hidden;
+    overflow: visible;
 }
 
 p {
